common-applications/test-environment/openeuler-software-package-server/gitee-robot/deployment.yaml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: gitee-robot
  namespace: openeuler-software-pkg
spec:
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: gitee-robot
  template:
    metadata:
      labels:
        app: gitee-robot
    spec:
      imagePullSecrets:
      - name: huawei-swr-image-pull-secret
      nodeSelector:
        autoscaler: "true"
      containers:
      - name: gitee-robot
        image: swr.cn-north-4.myhuaweicloud.com/opensourceway/openeuler/software-package-gitee-robot-test:v1.0.20230317101924
        args:
        - --port=8888
        - --config-file=/opt/app/config/config.yaml
        resources:
          requests:
            cpu: 200m
            memory: 200Mi
          limits:
            cpu: 500m
            memory: 500Mi
        volumeMounts:
        - mountPath: /opt/app/config/config.yaml
          name: robot-configmap
          subPath: config.yaml
      volumes:
      - configMap:
          defaultMode: 420
          name: robot-configmap
        name: robot-configmap
      - name: software-pkg-secret
        secret:
          secretName: software-pkg-secret
