common-applications/test-environment/openeuler-software-package-server/gitee-robot/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
  name: software-pkg-api-ingress
  namespace: openeuler-software-pkg
spec:
  tls:
    - hosts:
        - software.test.osinfra.cn
      secretName: gitee-robot-tls
  rules:
    - host: software.test.osinfra.cn
      http:
        paths:
        - backend:
            serviceName: robot-gitee-service
            servicePort: 80
          path: /gitee-hook
